fix: show more than 1 row of roles, on mobile

--- a/react_main/src/css/roles.css
+++ b/react_main/src/css/roles.css
@@ -87,6 +87,7 @@
   flex-flow: row nowrap;
 
   color: var(--scheme-color-text);
+  height: 32px;
 }
 
 .role-group-placeholder {
